# newton_sqrt

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
newton_sqrt/: CMakeLists.txt  newton_sqrt.cpp  newton_sqrt.h
